welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if (Math.abs(10-a)=Math.abs(10-b)) {
		return 0
	} else if (Math.abs(10-a)>Math.abs(10-b)) {
		return Math.abs(10-b)
	} else { 
		return Math.abs(10-a)
	}
	
}
